add indexes. Adjust labels. Add query params to query. Send topup notification. Remove unused table.
